fix overflow-y reponsive

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,6 @@ body {
     height: 100%;
     background-color: #e3f2fd;
     margin: 0;
-    overflow-y: hidden;
 
     .cdk-overlay-container {
         z-index: 3;
@@ -66,5 +65,11 @@ body {
                 visibility: visible;
             }
         }
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    body {
+        overflow-y: hidden;
     }
 }
